iputacion Columna Cruce y algunos cambios md de ETL

--- a/ETL BORRADOR.ipynb
+++ b/ETL BORRADOR.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -269,8 +269,9 @@
        "      dtype='object')"
       ]
      },
+     "execution_count": 175,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -595,8 +596,9 @@
        "20   100.00   0.00      0  "
       ]
      },
+     "execution_count": 177,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -644,8 +646,9 @@
        "      dtype='object')"
       ]
      },
+     "execution_count": 179,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -676,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1063,8 +1066,9 @@
        "[171 rows x 20 columns]"
       ]
      },
+     "execution_count": 180,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1074,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1242,8 +1246,9 @@
        "[171 rows x 5 columns]"
       ]
      },
+     "execution_count": 181,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1259,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1576,8 +1581,9 @@
        "621  Point (. .)     .     .  "
       ]
      },
+     "execution_count": 186,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1595,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1619,6 +1625,271 @@
    "metadata": {},
    "source": [
     "** Dado que "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Calle</th>\n",
+       "      <th>Cruce</th>\n",
+       "      <th>Dirección normalizada</th>\n",
+       "      <th>Comuna</th>\n",
+       "      <th>XY (CABA)</th>\n",
+       "      <th>Pos x</th>\n",
+       "      <th>Pos y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PIEDRA BUENA AV.</td>\n",
+       "      <td>FERNANDEZ DE LA CRUZ, F., GRAL. AV.</td>\n",
+       "      <td>PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Point (98896.78238426 93532.43437792)</td>\n",
+       "      <td>-58.47533969</td>\n",
+       "      <td>-34.68757022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PAZ, GRAL. AV.</td>\n",
+       "      <td>DE LOS CORRALES AV.</td>\n",
+       "      <td>PAZ, GRAL. AV. y DE LOS CORRALES AV.</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Point (95832.05571093 95505.41641999)</td>\n",
+       "      <td>-58.50877521</td>\n",
+       "      <td>-34.66977709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENTRE RIOS AV.</td>\n",
+       "      <td>AV ENTRE RIOS 2034</td>\n",
+       "      <td>ENTRE RIOS AV. 2034</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Point (106684.29090040 99706.57687843)</td>\n",
+       "      <td>-58.39040293</td>\n",
+       "      <td>-34.63189362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LARRAZABAL AV.</td>\n",
+       "      <td>VILLEGAS, CONRADO, GRAL.</td>\n",
+       "      <td>LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Point (99840.65224780 94269.16534422)</td>\n",
+       "      <td>-58.46503904</td>\n",
+       "      <td>-34.68092974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SAN JUAN AV.</td>\n",
+       "      <td>SAENZ PE?A, LUIS, PRES.</td>\n",
+       "      <td>SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Point (106980.32827929 100752.16915795)</td>\n",
+       "      <td>-58.38718297</td>\n",
+       "      <td>-34.62246630</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Calle                                Cruce  \\\n",
+       "0  PIEDRA BUENA AV.  FERNANDEZ DE LA CRUZ, F., GRAL. AV.   \n",
+       "1    PAZ, GRAL. AV.                  DE LOS CORRALES AV.   \n",
+       "2    ENTRE RIOS AV.                   AV ENTRE RIOS 2034   \n",
+       "3    LARRAZABAL AV.             VILLEGAS, CONRADO, GRAL.   \n",
+       "4      SAN JUAN AV.              SAENZ PE?A, LUIS, PRES.   \n",
+       "\n",
+       "                               Dirección normalizada  Comuna  \\\n",
+       "0  PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...       8   \n",
+       "1               PAZ, GRAL. AV. y DE LOS CORRALES AV.       9   \n",
+       "2                                ENTRE RIOS AV. 2034       1   \n",
+       "3          LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.       8   \n",
+       "4            SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.       1   \n",
+       "\n",
+       "                                 XY (CABA)         Pos x         Pos y  \n",
+       "0    Point (98896.78238426 93532.43437792)  -58.47533969  -34.68757022  \n",
+       "1    Point (95832.05571093 95505.41641999)  -58.50877521  -34.66977709  \n",
+       "2   Point (106684.29090040 99706.57687843)  -58.39040293  -34.63189362  \n",
+       "3    Point (99840.65224780 94269.16534422)  -58.46503904  -34.68092974  \n",
+       "4  Point (106980.32827929 100752.16915795)  -58.38718297  -34.62246630  "
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hechos[[ 'Calle', 'Cruce', 'Dirección normalizada', 'Comuna', 'XY (CABA)', 'Pos x', 'Pos y']][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 12 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "puntoY_count = df['Pos y'].value_counts()['.']\n",
+    "puntoX_count = df['Pos x'].value_counts()['.']\n",
+    "CabaXY_count = df['XY (CABA)'].value_counts()['Point (. .)']\n",
+    "print(puntoY_count, puntoX_count, CabaXY_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Calle</th>\n",
+       "      <th>Cruce</th>\n",
+       "      <th>Dirección normalizada</th>\n",
+       "      <th>Comuna</th>\n",
+       "      <th>XY (CABA)</th>\n",
+       "      <th>Pos x</th>\n",
+       "      <th>Pos y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PIEDRA BUENA AV.</td>\n",
+       "      <td>FERNANDEZ DE LA CRUZ, F., GRAL. AV.</td>\n",
+       "      <td>PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Point (98896.78238426 93532.43437792)</td>\n",
+       "      <td>-58.47533969</td>\n",
+       "      <td>-34.68757022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PAZ, GRAL. AV.</td>\n",
+       "      <td>DE LOS CORRALES AV.</td>\n",
+       "      <td>PAZ, GRAL. AV. y DE LOS CORRALES AV.</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Point (95832.05571093 95505.41641999)</td>\n",
+       "      <td>-58.50877521</td>\n",
+       "      <td>-34.66977709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENTRE RIOS AV.</td>\n",
+       "      <td>AV ENTRE RIOS 2034</td>\n",
+       "      <td>ENTRE RIOS AV. 2034</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Point (106684.29090040 99706.57687843)</td>\n",
+       "      <td>-58.39040293</td>\n",
+       "      <td>-34.63189362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LARRAZABAL AV.</td>\n",
+       "      <td>VILLEGAS, CONRADO, GRAL.</td>\n",
+       "      <td>LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Point (99840.65224780 94269.16534422)</td>\n",
+       "      <td>-58.46503904</td>\n",
+       "      <td>-34.68092974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SAN JUAN AV.</td>\n",
+       "      <td>SAENZ PE?A, LUIS, PRES.</td>\n",
+       "      <td>SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Point (106980.32827929 100752.16915795)</td>\n",
+       "      <td>-58.38718297</td>\n",
+       "      <td>-34.62246630</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Calle                                Cruce  \\\n",
+       "0  PIEDRA BUENA AV.  FERNANDEZ DE LA CRUZ, F., GRAL. AV.   \n",
+       "1    PAZ, GRAL. AV.                  DE LOS CORRALES AV.   \n",
+       "2    ENTRE RIOS AV.                   AV ENTRE RIOS 2034   \n",
+       "3    LARRAZABAL AV.             VILLEGAS, CONRADO, GRAL.   \n",
+       "4      SAN JUAN AV.              SAENZ PE?A, LUIS, PRES.   \n",
+       "\n",
+       "                               Dirección normalizada  Comuna  \\\n",
+       "0  PIEDRA BUENA AV. y FERNANDEZ DE LA CRUZ, F., G...       8   \n",
+       "1               PAZ, GRAL. AV. y DE LOS CORRALES AV.       9   \n",
+       "2                                ENTRE RIOS AV. 2034       1   \n",
+       "3          LARRAZABAL AV. y VILLEGAS, CONRADO, GRAL.       8   \n",
+       "4            SAN JUAN AV. y SAENZ PEÃ‘A, LUIS, PRES.       1   \n",
+       "\n",
+       "                                 XY (CABA)         Pos x         Pos y  \n",
+       "0    Point (98896.78238426 93532.43437792)  -58.47533969  -34.68757022  \n",
+       "1    Point (95832.05571093 95505.41641999)  -58.50877521  -34.66977709  \n",
+       "2   Point (106684.29090040 99706.57687843)  -58.39040293  -34.63189362  \n",
+       "3    Point (99840.65224780 94269.16534422)  -58.46503904  -34.68092974  \n",
+       "4  Point (106980.32827929 100752.16915795)  -58.38718297  -34.62246630  "
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hechosDirN = ver_filas_con_nulos(df_hechos, 'XY (CABA)')\n",
+    "df_hechos[[ 'Calle', 'Cruce', 'Dirección normalizada', 'Comuna', 'XY (CABA)', 'Pos x', 'Pos y']][:5]"
    ]
   }
  ],
